# synapse-whoami

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
scripts-dev/: lint.sh
synapse_whoami/: __init__.py  who_am_i.py
tests/: __init__.py  test_e2e.py
